--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ six==1.12.0
 sortedcontainers==2.1.0
 spacy==2.1.4
 srsly==0.0.7
-thinc==7.0.4
+thinc
 tqdm==4.32.2
 urllib3==1.25.3
 wasabi==0.2.2
